--- a/DonationDiary_ASP/Views/Entries/Create.cshtml
+++ b/DonationDiary_ASP/Views/Entries/Create.cshtml
@@ -1,43 +1,48 @@
-﻿@model DonationDiary_ASP.Models.Entry
+﻿@model DonationDiary_ASP.Views.ViewModels.EntryViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewBag.Title = "Create";
+    Layout = "_Layout";
 }
 
-<h1>Create</h1>
-
-<h4>Entry</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="DateOfDonation" class="control-label"></label>
-                <input asp-for="DateOfDonation" class="form-control" />
-                <span asp-validation-for="DateOfDonation" class="text-danger"></span>
+    <div class="col-md-6 offset-3">
+        <p>
+            <h4>Create an entry</h4>
+        </p>
+
+        @if (TempData["Error"] != null)
+        {
+            <div class="col-md-12 alert alert-danger">
+                <span><b>Sorry!</b>- @TempData["Error"]</span>
             </div>
-            <div class="form-group">
-                <label asp-for="BloodAmount" class="control-label"></label>
-                <input asp-for="BloodAmount" class="form-control" />
-                <span asp-validation-for="BloodAmount" class="text-danger"></span>
+        }
+        <div class="row">
+            <div class="col-md-8 offset-2">
+                <form asp-action="Create">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+                    <div class="form-group">
+                        <label asp-for="DateOfDonation" class="control-label"></label>
+                        <input asp-for="DateOfDonation" class="form-control" />
+                        <span asp-validation-for="DateOfDonation" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="BloodAmount" class="control-label"></label>
+                        <input asp-for="BloodAmount" class="form-control" />
+                        <span asp-validation-for="BloodAmount" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Comment" class="control-label"></label>
+                        <input asp-for="Comment" class="form-control" />
+                        <span asp-validation-for="Comment" class="text-danger"></span>
+                    </div>
+                    <p></p>
+                    <div class="form-group">
+                        <input class="btn btn-success float-end" type="submit" value="Create" />
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Comment" class="control-label"></label>
-                <input asp-for="Comment" class="form-control" />
-                <span asp-validation-for="Comment" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
